--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       - name: ⚙️ Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '7.0.39'
+          dotnet-version: '7.0.x'
 
       - name: 🛠️ Restore dependencies
         run: dotnet restore
